# medicc-todo

./: .dockerignore  .gitignore  .prettierrc.js  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml
api/: .env.example  docker-entrypoint.sh
api/apps/: conftest.py  urls.py
api/apps/auth/: urls.py  views.py
api/apps/auth/tests/: test_views.py
api/apps/todos/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/todos/migrations/: 0001_initial.py
api/apps/todos/tests/: factories.py  test_models.py  test_serializers.py  test_views.py
api/apps/users/: admin.py  models.py
api/apps/users/migrations/: 0001_initial.py  0002_user_middle_name.py
api/apps/users/tests/: factories.py
api/apps/utilities/: mixins.py  models.py  rest_permissions.py  validators.py
api/config/: asgi.py  urls.py  wsgi.py
api/config/settings/: base.py  local.py  prod.py  test.py
apps/web/: package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/(public)/login/: page.tsx
apps/web/src/app/(public)/todo/: page.tsx
apps/web/src/components/: Calendar.tsx  DateTimePicker.tsx  TodoItem.tsx
apps/web/src/components/forms/: Form.tsx  LoginForm.tsx  TodoForm.tsx
apps/web/src/config/: paths.ts  querykeys.ts
apps/web/src/hooks/todo/: useCreateTodo.ts  useDeleteTodo.ts  useFetchTodo.ts  useUpdateTodo.ts
apps/web/src/pages/: Login.tsx  Todo.tsx
apps/web/src/services/api/: todos.ts
apps/web/src/types/: todo.ts
notebooks/: train-yolo11-object-detection-on-custom-dataset.ipynb
